# genesis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  STORAGE.md  genesis-greet.service  genesis.py  init_storage.py  install.ps1  install.sh  vg-greet.service  vg-sentry.service  vg-sentry.timer
.github/workflows/: ci.yml  release.yml
commands/: config.py  greet.py  health.py  hero.py  project.py  self_update.py  setup.py  sort.py  status.py  storage.py  system.py
commands/pkg_managers/: managers.py
legacy_python/: genesis-greet.service  genesis-sentry.service  genesis-sentry.timer  genesis.py
legacy_python/commands/: greet.py  health.py  status.py  storage.py
legacy_python/commands/pkg_managers/: base.py  controller.py
legacy_python/examples/: README.md  project-structure-example.json
src/: ai.rs  analytics.rs  config.rs  main.rs  ui.rs
src/commands/: benchmark.rs  calc.rs  config_cmd.rs  config_tui.rs  env.rs  greet.rs  health.rs  hero.rs  info.rs  logs.rs  manjaro.rs  mod.rs  monitor.rs  network.rs  notes.rs  package.rs  project.rs  scan.rs  search.rs  search_tui.rs  self_update.rs  setup.rs  sort.rs  status.rs  storage.rs  system.rs  timer.rs  todo.rs  update.rs
src/commands/search/: lightspeed.rs
src/package_managers/: arch.rs  debian.rs  homebrew.rs  language.rs  mod.rs  universal.rs
