[package]
name = "genesis"
version = "2.0.0"
edition = "2021"
authors = ["Genesis Team"]
description = "Lightning-fast CLI tool with intelligent search, system management, and automation"
license = "MIT"
repository = "https://github.com/Raindancer118/genesis"
keywords = ["cli", "search", "system-management", "automation", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
sysinfo = "0.33"
whoami = "1.5"
directories = "5.0"
inquire = { version = "0.7", features = ["editor"] }
comfy-table = "7.1"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
shlex = "1.3"
which = "6.0"
dirs = "5.0"
# Lightspeed search dependencies
fuzzy-matcher = "0.3"
memmap2 = "0.9"
rayon = "1.10"
# AI integration dependencies
reqwest = { version = "0.11", features = ["json", "blocking"] }
image = "0.24"
