[package]
name = "volantic-genesis"
version = "3.4.0"
edition = "2021"
authors = ["Volantic Team"]
description = "Volantic Genesis — Fast, focused system CLI"
license = "MIT"
repository = "https://github.com/Raindancer118/genesis"
keywords = ["cli", "system-management", "package-manager", "search"]
categories = ["command-line-utilities"]

[[bin]]
name = "vg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
sysinfo = "0.33"
whoami = "1.5"
directories = "5.0"
inquire = { version = "0.7", features = ["editor"] }
comfy-table = "7.1"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
shlex = "1.3"
which = "6.0"
dirs = "5.0"
nucleo-matcher = "0.3"
ratatui = "0.29"
crossterm = "0.28"
memmap2 = "0.9"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
libc = "0.2"
